--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,45 @@
 *.rest
 .vscode
 .DS_Store
+
+# Logs
+logs
+*.log
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional debugging tools
+node_modules/
+appium.log
+
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Bower dependency directory (https://bower.io/)
+bower_components/
+
+# TypeScript
+*.tsbuildinfo
+
+# Yarn Integrity file (https://yarnpkg.com/lang/en/docs/yarn-lock/#toc-why-is-my-file-suddenly-huge)
+.yarn-integrity
+
+# Testing
+coverage
+
+# Production build
+build/
+
+# System Files
+.DS_Store
+Thumbs.db
